# sentimental-chat

./: .gitignore  Makefile  README.md  docker-compose-ci.yml  docker-compose.yml
analyzer/: .gitignore  Dockerfile  analyzer.py  cloudbuild-cd.yaml  cloudbuild-ci.yaml  cloudbuild.yaml  config.yaml  main.py  make_data.sh  model.py  pyproject.toml  test_main.py  train.py
analyzer/utils/: args.py  collator.py  dataset.py  early_stopping.py  gcloud.py  seed.py  tokenizer.py
analyzer/utils/path/: hottoSNS_bert.py
backend/: .gitignore  Dockerfile  cloudbuild-cd.yaml  cloudbuild-ci.yaml  pyproject.toml
backend/api/: admin.py  consumers.py  models.py  pagination.py  routing.py  serializers.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_message_room_alter_room_owner.py  0002_alter_user_icon.py  0003_room_message_room.py  0004_alter_message_room.py
backend/api/tests/: factories.py  test_views.py
backend/chat/: asgi.py  settings.py  urls.py
frontend/: .prettierrc.json  middleware.ts  package-lock.json  package.json
frontend/components/: auth-form.tsx  button.tsx  form.tsx  header.tsx  message-box.tsx
frontend/interfaces/: index.ts  next-auth.d.ts
frontend/pages/: _app.tsx  index.tsx  login.tsx  signup.tsx
frontend/pages/api/: login.ts
frontend/pages/api/auth/: [...nextauth].ts
frontend/pages/rooms/: [id].tsx
frontend/types/: index.ts
terraform/: .terraform.lock.hcl  Dockerfile  backend.tf  iam.tf  main.tf  provider.tf
terraform/modules/cd/: main.tf
terraform/modules/ci/: main.tf
terraform/modules/cloud-run/: main.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
