[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["nakatuba <nakatuba0626@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
cloudpickle = "^2.2.0"
fastapi = "^0.85.0"
fugashi = "^1.2.0"
google-cloud-storage = "^2.6.0"
pandas = "^1.5.1"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.13.0%2Bcu116-cp39-cp39-linux_x86_64.whl" }
transformers = "^4.25.0"
unidic-lite = "^1.0.8"
uvicorn = "^0.18.3"
wandb = "^0.13.5"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
