[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["nakatuba <nakatuba0626@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PyYAML = "^6.0"
cloudpickle = "^2.2.0"
fastapi = "^0.85.0"
fugashi = "^1.2.0"
google-cloud-storage = "^2.6.0"
pandas = "^1.5.1"
scikit-learn = "^1.2.0"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp39-cp39-linux_x86_64.whl" }
transformers = "^4.25.0"
unidic-lite = "^1.0.8"
uvicorn = "^0.18.3"
wandb = "^0.13.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
pandas-stubs = "^1.5.2.230105"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
