[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["nakatuba <nakatuba0626@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PyYAML = "^6.0"
cloudpickle = "^2.2.0"
faker = "^18.10.1"
fastapi = "^0.85.0"
fugashi = "^1.2.0"
google-cloud-storage = "^2.6.0"
pandas = "^1.5.1"
pytest = "^7.3.2"
torch = "^2.0.0"
transformers = "^4.25.0"
unidic-lite = "^1.0.8"
uvicorn = "^0.18.3"
wandb = "^0.13.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
pandas-stubs = "^1.5.2.230105"

[tool.isort]
known_third_party = ["wandb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
